--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.friendlyarm.Serial"
     android:versionCode="1"
     android:versionName="1.0" >
+<uses-sdk android:minSdkVersion="14"/>
 
-
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
